# getshop-test

./: CHANGELOG.md  LICENSE  README.md  config.yaml  getshop-test.cabal
app/: Main.hs
src/: Cache.hs  ParseOpts.hs  Server.hs  Types.hs
